# pyopenpose

./: CMakeLists.txt  README.md  pyopenpose.h
src/: setup.py
src/cpp/: CMakeLists.txt
src/cpp/pyopenpose/: common.h  pyopenpose.cpp  pyopenpose.i  pyopenposeSWIG.i
