# cuda
FIND_PACKAGE(CUDA 7.0 REQUIRED)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

# caffe
IF(NOT DEFINED CAFFE_HOME})
  IF(DEFINED ENV{CAFFE_HOME})
      MESSAGE(STATUS "=====>  Found CAFFE_HOME=$ENV{CAFFE_HOME}")
      SET(CAFFE_HOME $ENV{CAFFE_HOME})
  ELSE()
    MESSAGE(WARNING ">>>>>>>>>>  Could not find CAFFE_HOME")
  ENDIF()
ELSE()
      MESSAGE(STATUS "=====>  Found CMAKE CAFFE_HOME=${CAFFE_HOME}")
ENDIF()

INCLUDE_DIRECTORIES(${CAFFE_HOME}/include)

# OpenCV

FIND_PACKAGE(OpenCV 3.0 REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

# openpose

IF(NOT DEFINED OPENPOSE_HOME})
  IF(DEFINED ENV{OPENPOSE_HOME})
      MESSAGE(STATUS "=====>  Found OPENPOSE_HOME=$ENV{OPENPOSE_HOME}")
      SET(OPENPOSE_HOME $ENV{OPENPOSE_HOME})
  ELSE()
    MESSAGE(FATAL_ERROR "Could not find OPENPOSE_HOME, please define ENV variable or a CMake variable.")
  ENDIF()
ELSE()
      MESSAGE(STATUS "=====>  Found CMAKE OPENPOSE_HOME=${OPENPOSE_HOME}")
ENDIF()


INCLUDE_DIRECTORIES(${OPENPOSE_HOME}/include)
LINK_DIRECTORIES(${OPENPOSE_HOME}/lib)
ADD_DEFINITIONS(-DUSE_CAFFE)

# pyopenpose

SET(PYOPENPOSE_FILES
        common.h
        pyopenpose.cpp pyopenpose.h
    )

SET(PYOPENPOSE_LIBRARIES
    openpose
    ${OpenCV_LIBS}
    )

# local files always override external files
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${CABVI_CURRENT_BINARY_DIR})
# include root path
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

# cabvi library
BUILD_LIBRARY(pyopenpose "${PYOPENPOSE_FILES}" "${PYOPENPOSE_LIBRARIES}")

# cabviSWIG SWIG library
SWIG_BUILD_MODULE_PY(pyopenposeSWIG "pyopenposeSWIG.i" "pyopenpose")
